fix spacing 3

--- a/general.css
+++ b/general.css
@@ -10,7 +10,6 @@ body{
 
 .logorow{
 	padding-top: 150px;
-	margin-bottom: 300px;
 }
 
 .logo{
@@ -30,12 +29,6 @@ body{
 	margin: 0 auto;
 	text-align: center;
 	padding: 0px 20px 20px 20px;
-}
-
-@media(min-width: 1440px){
-	#boxes{
-		margin-top: 200px;
-	}
 }
 
 @media(max-width: 1100px){
@@ -81,6 +74,7 @@ body{
     margin-left: -25px;
     position: absolute;
     width: 50px;
+	margin-bottom: 200px;
 }
 
 .alignright{
